@@ -1,3 +1,8 @@
+# VERSION 45
+- Added bar graph for submission running time for AC tests
+- Reworked console logging (now uses console.debug)
+- Changed the way achievements are stored, thus removing achievements got before version 45 (go to Learn C++ and Algorithms next to get them again)
+
 # VERSION 44
 44.1
 - Changed all substr in code with substring
